# embeddings-showcase

./: .env.example  .gitignore  README.md  pyproject.toml
app/: Home.py  README.md
app/clustering/: README.md
app/pages/: 1_Vector_Search.py  2_Clustering.py  3_Topic_Modelling.py  4_Classification.py
notebooks/: README.md
scripts/: embed_hf.py  embed_openai.py  prepare_dataset.py
src/embeddings_showcase/: __init__.py  clustering.py  config.py  data.py  embeddings.py  reduction.py  similarity.py  topic_modeling.py
