[project]
name = "embeddings-showcase"
version = "0.1.0"
description = "A learning-first showcase of practical dense embedding workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "evoc==0.3.1",
    "huggingface-hub>=0.36,<1.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openai>=2.35.1",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.57.0",
    "turftopic==0.25.2",
    "umap-learn>=0.5.12",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
